# CMake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  path.h
include/: Const.h  Const2.h  path.h.in
lib/Geometrics/: CMakeLists.txt  Makefile  Point2D.cpp  circle.cpp  cmake_install.cmake  square.cpp  triangle.cpp
lib/Geometrics/include/: Point2D.h  circle.h  shape.h  square.h  triangle.h
lib/HandyMath/: handy_math.cpp
lib/HandyMath/include/: handy_math.h
src/: main.cpp
